--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -306,6 +306,10 @@ div.footnotes {
         left: -15px;
         top: 0;
       }
+      p {
+        line-height: 20px;
+        margin: 0;
+      }
       a.footnote-return {
         @extend %no-decoration;
         margin-left: 5px;
