--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -174,6 +174,14 @@
       });
     }
   </script>
+  {{ if .IsPage }}
+  {{ $footnotes := resources.Get "js/barefoot.js" | minify }}
+  <script src="{{ $footnotes.Permalink }}"></script>
+  <script>
+    lf = new BareFoot();
+    lf.init();
+  </script>
+  {{ end }}
   {{ if eq .Title "Bookmarks" }}
   <script>
     // Filter by tag
