--- a/layouts/shortcodes/fn.html
+++ b/layouts/shortcodes/fn.html
@@ -1,2 +1,2 @@
 {{ $i := .Get 0 }}
-<sup class="footnote-ref" id="fnref:{{ $i }}"><a href="{{ .Page.RelPermalink }}#fn:{{ $i }}">[{{ $i }}]</a></sup>
+<sup class="footnote-ref" id="fnref:{{ $i }}"><a href="{{ .Page.RelPermalink }}#fn:{{ $i }}" rel="footnote">[{{ $i }}]</a></sup>
