--- a/layouts/partials/row-bot.html
+++ b/layouts/partials/row-bot.html
@@ -38,10 +38,10 @@
     </g>
     <g id="ears" transform="matrix(1,0,0,1,7.43367,-3)">
       <g class="meta" transform="matrix(0.954545,0,0,1.36054,329.724,-190.036)">
-        <ellipse cx="618" cy="527.5" rx="55" ry="73.5" style=";stroke:rgb(33,35,46);stroke-width:18.96px;"/>
+        <ellipse cx="618" cy="527.5" rx="55" ry="73.5" style="stroke:rgb(33,35,46);stroke-width:18.96px;"/>
       </g>
       <g class="meta" serif:id="meta" transform="matrix(0.954545,0,0,1.36054,-334.409,-190.036)">
-        <ellipse cx="618" cy="527.5" rx="55" ry="73.5" style=";stroke:rgb(33,35,46);stroke-width:18.96px;"/>
+        <ellipse cx="618" cy="527.5" rx="55" ry="73.5" style="stroke:rgb(33,35,46);stroke-width:18.96px;"/>
       </g>
     </g>
     <g id="antenna">
@@ -49,7 +49,7 @@
         <path d="M744.378,233.912L596,211.933L596,287.151" style="fill:none;stroke-width:8px;"/>
       </g>
       <g class="meta" serif:id="meta" transform="matrix(1.28205,0,0,1.33333,30.557,-55.9596)">
-        <ellipse cx="595" cy="166.5" rx="39" ry="37.5" style=";stroke:rgb(33,35,46);stroke-width:17.03px;"/>
+        <ellipse cx="595" cy="166.5" rx="39" ry="37.5" style="stroke:rgb(33,35,46);stroke-width:17.03px;"/>
       </g>
     </g>
   </g>
