--- a/assets/css/colors.scss
+++ b/assets/css/colors.scss
@@ -1,31 +1,31 @@
 // Theme definitions
 $black: (
   background: #000,
-  box: 8px 8px 0 0 #969696,
-  button: rgba(#969696,.7),
-  content: rgba(#EB7760,.3),
-  contentBG: lighten(#000,3%),
-  link: #EB7760,
-  meta: #969696,
-  text: #FFF,
+  border: #6F697C,
+  button: #8F3A6D,
+  content: #73D5E9,
+  contentBG: #1F202A,
+  link: #8BE9FD,
+  meta: #CDAEF9,
+  text: #FEFFFE,
 );
 $dark: (
-  background: #12151B,
-  box: 8px 8px 0 0 #71ADBC,
-  button: rgba(#71ADBC,.7),
-  content: rgba(#F2815A,.3),
-  contentBG: lighten(#12151B,3%),
-  link: #F2815A,
-  meta: #71ADBC,
-  text: #9DA1B4,
+  background: #111C2A,
+  border: #304361,
+  button: #503A88,
+  content: #BCA9E5,
+  contentBG: #172134,
+  link: #54C1DC,
+  meta: #C1A35C,
+  text: #F6F7EE,
 );
 $light: (
-  background: #FFF,
-  box: 8px 8px 0 0 #545454,
-  button: rgba(#545454,.7),
-  content: rgba(#A32C14,.3),
-  contentBG: darken(#545454,15%),
-  link: #A32C14,
-  meta: #545454,
-  text: #12151B,
+  background: #FAFBFA,
+  border: #DCDDDC,
+  button: #414747,
+  content: #6AC9FB,
+  contentBG: #424242,
+  link: #D7373A,
+  meta: #424242,
+  text: #333,
 );
