--- a/assets/css/syntax.scss
+++ b/assets/css/syntax.scss
@@ -5,8 +5,8 @@
 .chroma {
   @include color(background-color, contentBG);
   color: #f8f8f2;
-  border: 1px solid;
-  @include color(border-color, content);
+  border: 1.5px solid;
+  @include color(border-color, border);
 }
 /* LineTableTD */ .chroma .lntd { vertical-align: top; padding: 0; margin: 0; border: 0; }
 /* LineTable */ .chroma .lntable { border-spacing: 0; padding: 0; margin: 0; border: 0; width: auto; overflow: auto; display: block; }
