--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -9,6 +9,7 @@ ul#portfolio {
   }
   li {
     list-style: none;
+    list-style: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E");
     max-width: 300px;
     padding: 0;
     h4, p {
@@ -156,6 +157,7 @@ ul.portfolio {
   }
   li.projects {
     list-style: none;
+    list-style: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E");
     margin: 10px;
     min-height: 280px;
     figure {
@@ -293,12 +295,13 @@ div.footnotes {
   p:empty {
     @extend %none;
   }
-  ul {
+  ol {
     li {
       @extend %relative;
       font-size: 1rem;
       line-height: 20px;
       list-style-type: none;
+      list-style: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E");
       margin-bottom: 10px;
       &::before {
         @extend %absolute;
