--- a/assets/css/colors.scss
+++ b/assets/css/colors.scss
@@ -4,7 +4,7 @@ $black: (
   border: #6F697C,
   button: #8F3A6D,
   content: #73D5E9,
-  contentBG: #1F202A,
+  contentBG: #101116,
   link: #8BE9FD,
   meta: #CDAEF9,
   text: #FEFFFE,
