--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,5 +2,144 @@
 @import 'colors';
 @import 'extends';
 @import 'mixins';
-@import 'layout';
-@import 'barefoot';
+@import 'foot';
+// List
+main.list {
+  section.year-container {
+    @extend %content-space-between;
+    @extend %flex;
+    @extend %flex-wrap;
+    @extend %items-flex-start;
+    margin-bottom: 15px;
+    &:nth-child(n+2) {
+      @include color(border-top-color, meta);
+      border-top-style: solid;
+      border-top-width: 1px;
+      padding-top: 15px;
+    }
+    h2 {
+      margin: 0;
+      &.list-date {
+        width: 85px;
+        @include media-query-max(590px) {
+          @include color(border-bottom-color, meta);
+          border-bottom-style: solid;
+          border-bottom-width: 1px;
+          margin-bottom: 15px;
+          padding-bottom: 15px;
+          width: 100%;
+        }
+      }
+      a {
+        font-size: 2rem;
+      }
+    }
+    .posts-list {
+      @extend %full-width;
+      max-width: 700px;
+      article.list-item:last-child,
+      article.list-item section.info {
+        margin-bottom: 0;
+      }
+    }
+    ul.posts-list {
+      @extend %content-center;
+      @extend %flex;
+      @extend %flex-column;
+      @extend %items-flex-start;
+      max-width: 100%;
+      padding: 0;
+      li.post-tag {
+        font-size: 1.1rem;
+        font-weight: bold;
+        list-style-type: none;
+        margin: 15px 0;
+        text-transform: capitalize;
+      }
+    }
+
+  }
+  article {
+    div.meta-info {
+      @extend %content-space-between;
+      @extend %flex;
+      @extend %items-center;
+    }
+  }
+}
+// Bookshelf
+main.bookshelf {
+  section.book-list {
+    article.book {
+      height: 265px;
+      margin-bottom: 20px;
+      width: 155px;
+      @supports (display:grid) {
+        @extend %content-self-center;
+        margin: 0;
+      }
+      &:hover h2.title a {
+        @include color(color, link);
+      }
+      a.cover {
+        width: 150px;
+        img {
+          height: 150px;
+          width: 150px;
+        }
+      }
+      h2.book-title {
+        font-size: 1.1rem;
+        line-height: 1.2rem;
+        margin: 0 0 5px;
+        a {
+          font-size: 1.1rem;
+          line-height: 1.2rem;
+        }
+      }
+      p.author {
+        @include color(color, text);
+        font-size: .9rem;
+        line-height: .9rem;
+        margin-bottom: 10px;
+      }
+      time.date {
+        font-size: .9rem;
+      }
+    }
+  }
+}
+// Paginator
+nav.paginate {
+  a {
+    height: 35px;
+    &.page-next {
+      margin-left: auto;
+    }
+    &.page-prev {
+      margin-right: auto;
+    }
+    svg {
+      height: 35px;
+      width: auto;
+    }
+  }
+}
+// 404
+main.err-404 {
+  @extend %content-space-around;
+  @extend %flex;
+  @extend %flex-column;
+  @extend %items-center;
+  height: calc(100vh - 90px);
+  h1 {
+    font-size: 1.6rem;
+    margin-bottom: 15px;
+    text-align: center;
+  }
+  img {
+    height: auto;
+    max-width: 650px;
+    width: 100%;
+  }
+}
