--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,6 +5,8 @@
     <p class="divider">&nbsp;&bull;&nbsp;</p>
     <a href="{{ .Site.BaseURL }}bookmarks" class="extra-items">Bookmarks</a>
     <p class="divider">&nbsp;&bull;&nbsp;</p>
+    <a href="{{ .Site.BaseURL }}microposts" class="extra-items">Microposts</a>
+    <p class="divider">&nbsp;&bull;&nbsp;</p>
     <a href="{{ .Site.BaseURL }}stuff" class="extra-items">Stuff</a>
   </nav>
   <section class="copy">
