--- a/assets/css/mixins.scss
+++ b/assets/css/mixins.scss
@@ -9,6 +9,11 @@
     @content;
   }
  }
+ @mixin range($max,$min) {
+  @media screen and (max-width: $max) and (min-width: $min) {
+    @content;
+  }
+}
  @mixin color($property, $varName) {
   #{$property}: map-get($light, $varName);
   #{$property}: var(--#{$varName});
