--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -23,7 +23,7 @@
     <a href="{{ .Site.BaseURL }}">Home</a>
     <a href="{{ .Site.BaseURL }}articles">Articles</a>
     <a href="{{ .Site.BaseURL }}about">About Me</a>
-    <a href="{{ .Site.BaseURL }}{{ if or (eq .Section "bookshelf") (eq (.Scratch.Get "b") "bookshelf" ) }}bookshelf{{ else }}articles{{ end }}/feed.json" class="rss" target="_blank" rel="noopener" aria-label="RSS">
+    <a href="{{ .Site.BaseURL }}{{ if or (eq .Section "bookshelf") (eq (.Scratch.Get "b") "bookshelf" ) }}bookshelf{{ else if eq .Section "microposts" }}microposts{{ else }}articles{{ end }}/feed.json" class="rss" target="_blank" rel="noopener" aria-label="RSS">
       <svg width="15" height="15" viewBox="0 0 200 200" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
         xml:space="preserve" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round"
         stroke-miterlimit="1.41421">
