--- a/assets/css/critical.scss
+++ b/assets/css/critical.scss
@@ -176,7 +176,7 @@ body {
         @include color(background-color, text);
         height: 3px;
         margin-top: 5px;
-        transition: all 0.2s ease-in-out;
+        transition: all 0.25s ease-in-out;
         width: 30px;
       }
     }
@@ -200,7 +200,7 @@ body {
         overflow: hidden;
         padding: 0;
         text-align: center;
-        transition: all 0.3s ease;
+        transition: all .25s ease;
         width: 100%;
         z-index: 10;
         @supports (display:grid) {
