--- a/assets/css/foot.scss
+++ b/assets/css/foot.scss
@@ -28,12 +28,33 @@ footer#footer {
       height: 30px;
       width: 30px;
     }
-    a svg {
-      margin: 0;
-    }
-    a.email {
-      svg g path {
-        fill: transparent;
+    a {
+      @extend %relative;
+      &::before {
+        @extend %absolute;
+        @include color(background-color, contentBG);
+        @include color(color, content);
+        @include color(border-color, border);
+        border-width: 1.5px;
+        border-radius: 5px;
+        border-style: solid;
+        content: attr(aria-label);
+        opacity: 0;
+        padding: 5px 10px;
+        text-align: center;
+        top: 10px;
+        transform: translate(-30%,-35%);
+        transition: all .25s ease;
+        width: 82px;
+
+      }
+      &:hover::before {
+        transform: translate(-30%,-150%);
+        opacity: 1;
+      }
+      svg {
+        @extend %relative;
+        margin: 0;
       }
     }
     @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
@@ -127,7 +148,7 @@ body {
       @extend %items-center;
       cursor: pointer;
       height: 35px;
-      transition: all 0.3s ease;
+      transition: all .25s ease;
       width: 35px;
       @supports (display:grid) {
         grid-column: 2/3;
@@ -135,7 +156,7 @@ body {
       svg {
         fill: #F6F7EE;
         height: 25px;
-        transition: all 0.3s ease;
+        transition: all .25s ease;
         width: 25px;
       }
     }
@@ -146,7 +167,7 @@ body {
       height: 35px;
       overflow: hidden;
       padding: 0;
-      transition: all 0.3s ease;
+      transition: all .25s ease;
       width: 0;
       @supports (display:grid) {
         @extend %grid;
