--- a/assets/css/critical.scss
+++ b/assets/css/critical.scss
@@ -93,10 +93,10 @@ body {
     min-height: 72px;
     @supports (display:grid) {
       display: grid;
-      grid-template-columns: 155px 290px;
+      grid-template-columns: 155px 485px;
       grid-template-rows: auto;
-      @include media-query-max(570px) {
-        grid-template-columns: 155px 120px;
+      @include media-query-max(700px) {
+        grid-template-columns: 155px 140px;
         grid-template-rows: repeat(2,auto);
       }
     }
@@ -109,7 +109,7 @@ body {
       width: 155px;
       @supports (display:grid) {
         grid-column: 1/2;
-        @include media-query-max(570px) {
+        @include media-query-max(700px) {
           grid-row: 1/2;
         }
       }
@@ -149,7 +149,7 @@ body {
         transform: scale(0);
       }
       &:checked ~ nav.navbar {
-        height: 140px;
+        height: 215px;
         margin-top: 15px;
       }
     }
@@ -162,13 +162,13 @@ body {
       width: 30px;
       z-index: 10;
       @supports (display:grid) {
-        @include media-query-max(570px) {
+        @include media-query-max(700px) {
           justify-self: end;
           grid-column: 2/3;
           grid-row: 1/2;
         }
       }
-      @include media-query-min(570px) {
+      @include media-query-min(700px) {
         display: none;
       }
       div {
@@ -181,15 +181,15 @@ body {
       }
     }
     nav.navbar {
-      width: 290px;
+      width: 485px;
       @supports (display:grid) {
         grid-column: 2/3;
-        @include media-query-max(570px) {
+        @include media-query-max(700px) {
           grid-column: 2/3;
           grid-row: 2/3;
         }
       }
-      @include media-query-max(570px) {
+      @include media-query-max(700px) {
         @include color(background-color, background);
         align-items: flex-end;
         clear: both;
@@ -211,12 +211,13 @@ body {
       }
       a {
         @extend %decoration-none;
+        font-size: .95rem;
         line-height: 1rem;
         transition: text-decoration 0.5s ease;
         @include media-query-max(350px) {
           line-height: 1rem;
         }
-        @include media-query-max(570px) {
+        @include media-query-max(700px) {
           margin: 10px 0 10px auto;
           text-align: end;
         }
