--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,11 +1,9 @@
 <footer id="footer">
   {{ partial "social.html" . }}
   <nav class="extra">
-    <a href="{{ .Site.BaseURL }}bookshelf" class="extra-items">Bookshelf</a>
-    <p class="divider">&nbsp;&bull;&nbsp;</p>
     <a href="{{ .Site.BaseURL }}bookmarks" class="extra-items">Bookmarks</a>
     <p class="divider">&nbsp;&bull;&nbsp;</p>
-    <a href="{{ .Site.BaseURL }}microposts" class="extra-items">Microposts</a>
+    <a href="{{ .Site.BaseURL }}notes" class="extra-items">Notes</a>
     <p class="divider">&nbsp;&bull;&nbsp;</p>
     <a href="{{ .Site.BaseURL }}stuff" class="extra-items">Stuff</a>
   </nav>
