--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -20,15 +20,24 @@
 
   <!-- Site navigation menu -->
   <nav class="navbar">
-    <a href="{{ .Site.BaseURL }}">Home</a>
     <a href="{{ .Site.BaseURL }}articles">Articles</a>
     <a href="{{ .Site.BaseURL }}microposts">Microposts</a>
     <a href="{{ .Site.BaseURL }}bookshelf">Bookshelf</a>
     <a href="{{ .Site.BaseURL }}about-me">About Me</a>
+    <a href="https://www.twitter.com/{{ .Site.Params.social }}" class="twitter" target="_blank" rel="noopener" aria-label="Twitter">
+      <svg width="15" height="15" viewBox="0 0 200 200" version="1.1" role="img" aria-labelledby="twitterTitle" aria-describedby="twitterDesc">
+        <title id="twitterTitle">View my twitter profile</title>
+        <desc id="twitterDesc">link to twitter profile</desc>
+        <g>
+          <path d="M12.801,1.83C12.332,2.038 11.824,2.182 11.293,2.245C11.836,1.92 12.25,1.405 12.449,0.791C11.941,1.092 11.379,1.311 10.777,1.428C10.301,0.92 9.617,0.6 8.863,0.6C7.414,0.6 6.238,1.776 6.238,3.225C6.238,3.432 6.262,3.631 6.305,3.823C4.121,3.713 2.188,2.67 0.891,1.08C0.664,1.467 0.534,1.92 0.534,2.401C0.534,3.311 1,4.116 1.703,4.584C1.273,4.573 0.871,4.452 0.516,4.256L0.516,4.288C0.516,5.561 1.422,6.623 2.621,6.866C2.402,6.924 2.168,6.955 1.93,6.955C1.762,6.955 1.598,6.94 1.434,6.909C1.77,7.952 2.738,8.709 3.887,8.733C2.988,9.436 1.855,9.854 0.625,9.854C0.414,9.854 0.207,9.842 0,9.819C1.164,10.565 2.543,10.998 4.027,10.998C8.855,10.998 11.496,6.998 11.496,3.53L11.488,3.19C12.004,2.819 12.449,2.358 12.801,1.83Z"
+            transform="matrix(15.6238,0,0,15.6238,0,9.3977)" fill-rule="nonzero" />
+        </g>
+      </svg>
+    </a>
     <a href="{{ .Site.BaseURL }}{{ if or (eq .Section "bookshelf") (eq (.Scratch.Get "b") "bookshelf" ) }}bookshelf{{ else if eq .Section "microposts" }}microposts{{ else }}articles{{ end }}/feed.json" class="rss" target="_blank" rel="noopener" aria-label="RSS">
-      <svg width="15" height="15" viewBox="0 0 200 200" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-        xml:space="preserve" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round"
-        stroke-miterlimit="1.41421">
+      <svg  width="15" height="15" viewBox="0 0 200 200" version="1.1" role="img" aria-labelledby="rssTitle" aria-describedby="rssDesc">
+        <title id="rssTitle">View my rss profile</title>
+        <desc id="rssDesc">link to rss profile</desc>
         <g>
           <path d="M12.516,66.969C9.039,66.969 6.082,68.187 3.648,70.621C1.219,73.055 0,76.008 0,79.484C0,82.961 1.215,85.914 3.648,88.347C6.082,90.781 9.039,92 12.516,92C15.992,92 18.945,90.781 21.379,88.347C23.812,85.914 25.027,82.961 25.027,79.484C25.027,76.008 23.812,73.055 21.379,70.621C18.945,68.187 15.992,66.969 12.516,66.969Z"
             transform="matrix(2.17909,0,0,2.17909,0,-0.49247)" fill-rule="nonzero" />
