--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,6 +10,6 @@
   <section class="copy">
     <!-- Copyright -->
     <p>&copy;&nbsp;{{ time.Now.Format "2006" }}&nbsp;</p>
-    <p>{{ .Site.Title }}</p>
+    <p>{{ .Site.Author.name }}</p>
   </section>
 </footer>
