--- a/assets/css/syntax.scss
+++ b/assets/css/syntax.scss
@@ -12,22 +12,36 @@ p code {
   @include color(border-color, border);
   border-radius: 5px;
   font-family: 'Plex Mono', monospace !important;
+  font-size: 1rem;
   padding: 0 4px;
 }
 /* Parent */
-.highlight pre {
-  overflow-x: auto;
-  &.chroma {
-    @extend %relative;
-    code::before {
-      @extend %absolute;
-      @include color(color, content);
-      content: attr(data-lang);
-      font: normal 13px 'Plex Mono', monospace;
-      left: 15px;
-      text-transform: uppercase;
-      top: 15px;
+.highlight {
+  @extend %relative;
+  pre {
+    overflow-x: auto;
+    &.chroma {
+      @extend %relative;
+      code::before {
+        @extend %absolute;
+        @extend %none;
+        @include color(color, content);
+        content: attr(data-lang);
+        font: normal 13px 'Plex Mono', monospace;
+        left: 15px;
+        text-transform: uppercase;
+        top: 15px;
+      }
     }
+  }
+  span.lang {
+    @extend %absolute;
+    @include color(color, content);
+    font: normal 13px 'Plex Mono', monospace;
+    left: 15px;
+    text-transform: uppercase;
+    top: 15px;
+    z-index: 10;
   }
 }
 .chroma {
