Added copy to clipboard functionality for code blocks.

--- a/assets/css/barefoot.scss
+++ b/assets/css/barefoot.scss
@@ -2,6 +2,9 @@
   display: inline-block;
   position: relative;
   text-indent: 0;
+  div {
+    outline: none;
+  }
 }
 .footnote-backdrop {
   cursor: pointer;
